Add uiScrollView GTK implementation

--- a/examples/meson.build
+++ b/examples/meson.build
@@ -48,6 +48,9 @@ libui_examples = {
 	'datetime': {
 		'sources':		['datetime/main.c'],
 	},
+	'scrolling': {
+		'sources':		['scrolling/main.c'],
+	},
 }
 foreach name, args : libui_examples
 	# TODO once we upgrade to 0.49.0, add pie: true
